Настроил два источника данных, наконец-то один из них заработал